<resources>
    <!-- Страница логина -->
    <string name="app_name">StudentHelperMobile</string>
    <string name="Welcome">Добро пожаловать в Student Helper</string>
    <string name="Authorization">Вы преподаватель или студент?</string>
    <string name="Prepod">Преподаватель</string>
    <string name="Student">Студент</string>
    <string name="Enter_FIO">Введите ФИО в формате "Фамилия И.О."</string>
    <string name="Enter_Group_number">Введите номер группы</string>
    <string name="Enter_Password">Введите пароль</string>
    <string name="Login_button">Войти</string>

    <!-- Главное меню -->
    <string name="Group">группа</string>
    <string name="ScheduleToday">Получить расписание на сегодня</string>
    <string name="ScheduleTomorrow">Получить расписание на завтра</string>
    <string name="ScheduleTwoWeeks">Получить полное расписание</string>
    <string name="PrepodInfo">Получить информацию о преподавателях</string>
    <string name="PrepodChat">Открыть чаты с преподавателями</string>
    <string name="StudentChat">Открыть чаты со студентами</string>
    <string name="LogoutTip">Чтобы выйти из аккаунта, нажмите кнопку "Назад"</string>
    <string name="LoginAsStudent">Вы авторизованы как студент группы %1$s</string>
    <string name="LoginAsPrepod">Вы авторизованы как преподаватель %1$s</string>

    <!-- Лист преподавателей -->
    <string name="Search">Поиск</string>
    <string name="SearchHint">Начните вводить для поиска</string>

    <!-- Расписание -->
    <string name="SubGroup">%1$d подгруппа</string>
    <string name="FirstSubgroup">1 подгруппа</string>
    <string name="SecondSubgroup">2 подгруппа</string>
    <string name="BothSubgroup">Обе подгруппы</string>
    <string name="NumberOfWeek">%1$d неделя</string>

    <!-- Сообщения об ошибках -->
    <string name="Login_error">Ошибка: неправильные ФИО</string>
    <string name="Password_error">Ошибка: неправильный пароль</string>
    <string name="Group_error">Ошибка: неправильный номер группы</string>
    <string name="Hohol">Хохла спросить забыли</string>
    <string name="Server_error">Ошибка сервера</string>
</resources>
