<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/TextStyle"
        android:id="@+id/welcome_text"/>

    <Button
        style="@style/TextStyleButton"
        android:text="@string/ScheduleToday"
        android:id="@+id/schedule_today"/>

    <Button
        style="@style/TextStyleButton"
        android:text="@string/ScheduleTomorrow"
        android:id="@+id/schedule_tomorrow"/>

    <Button
        style="@style/TextStyleButton"
        android:text="@string/ScheduleTwoWeeks"
        android:id="@+id/schedule_two_weeks"/>

    <Button
        style="@style/TextStyleButton"
        android:text="@string/PrepodInfo"
        android:layout_marginTop="60dp"
        android:id="@+id/prepod_info"/>

    <Button
        style="@style/TextStyleButton"
        android:text="@string/PrepodChat"
        android:id="@+id/prepod_chat"/>

    <TextView
        style="@style/TextStyle"
        android:text="@string/LogoutTip"
        android:textSize="16sp"
        android:layout_marginTop="50dp"/>


</LinearLayout>