<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BLACK"
        android:text="@string/Welcome"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BLACK"
        android:text="@string/Authorization"
        android:gravity="center"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Prepod"
            android:textColor="@color/BLACK"
            android:id="@+id/choose_prepod"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Student"
            android:textColor="@color/BLACK"
            android:id="@+id/choose_student"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BLACK"
        android:text="@string/Enter_FIO"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/text_enter_fio"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BLACK"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/enter_fio"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BLACK"
        android:text="@string/Enter_Password"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/text_enter_password"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/BLACK"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:id="@+id/enter_password"
        android:visibility="invisible"/>

    <Button
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:text="@string/Login_button"
        android:textColor="@color/BLACK"
        android:id="@+id/login_button"
        android:visibility="invisible"/>


</LinearLayout>